2019-07-25
- Rework nfpcapd and add it officially to the nfdump collection.
- Add nfpcapd man page
- Fix potential unsigned integer underflow #171

2019-07-16
- Add latency extension if dumping flowcache

2019-07-15
- Fix typos
- Fix exporter struct inconsistancies. Coredump on ARM otherwise.

2019-07-02
- Add ipfix element #150, #151 unix time start/end
- Fix display bug raw record

2019-06-01
- Add ipfix dyn element handling.
- Add empty m4 directory - keep autoconf happy

2019-06-01
- Fix issue #162 - ipfix mpls sequece.
- Fix issue #156 - print flowtable index error

2019-03-17
- Fix spec file
- Remove non thread safe logging in nfpcapd

2018-11-24
- Fix protocol tag for protocol 87 - TCF - #130
- Add TCP flags ECN,CVR - #132
- Fix some error messages to be printed to the correct stream #135
- Add missing -M command line help to nfcapd
- Remove padding byte warning in log #141
- Fix bug to accept -y compression flag in nfcapd. - #145

2018-06-24
- Fix bookkeeper type - use key_t
- Add multiple packet repeaters to nfcapd/sfcapd. Up to 8 repeaters (-R) can be defined.
- Ignore OSX .DS_Store files in -R file list
- Add CISCO ASA elements initiatorPackets (298) responderPackets (299)
- Merge #120 pull request for -z parameter to nfreplay
- Update man page nfreplay

2018-05-06
- New bookkeeper hash broke NfSen. Fixed. ported back to release 1.6.17

2018-04-20
- Release 1.6.17

2018-04-20
- Fix bug in sorting when guessing flow direction. Issue #92
- Update nfdump.1 man page for xsrcport & xdstport aggregations. Request #109
- Fix minor bugs
- Fix definition for InfluxDB in configure.ac Issue #98

2018-04-01
- Add program exit in nfx.c after panic with correupt data file
- Add missing size check when reading nfdump 1.5.x common record blocks
- Add missing option -M in man page. Issue #103
- Add Fix processing of influx URL in nfprofile

2018-02-11
- Add missing json output format in nfdump help text
- Add missing -v option in nfreplay help text

2018-01-06